# WindowsRemote

./: README.md  TODO.txt
AndroidClient/app/: build.gradle  proguard-rules.pro
AndroidClient/app/src/androidTest/java/com/bourdi_bay/WindowsRemote/: Input_MainActivityTest.java
AndroidClient/app/src/androidTest/java/com/bourdi_bay/WindowsRemote/Settings/: NavigationMainActivityToSettingsTest.java  SettingsActivityTest.java
AndroidClient/app/src/androidTest/java/com/bourdi_bay/WindowsRemote/Utils/: ActivityFinisher.java  LowLevelActions.java
AndroidClient/app/src/main/: AndroidManifest.xml
AndroidClient/app/src/main/java/com/bourdi_bay/WindowsRemote/: LoggerTags.java  MainActivity.java  MainActivityFragment.java
AndroidClient/app/src/main/java/com/bourdi_bay/WindowsRemote/Communication/: CommunicationType.java  Communicator.java  CommunicatorException.java  MessageBroadcast.java  MessageBroadcastFactory.java  MyDeltaPoint.java  MyPoint.java
AndroidClient/app/src/main/java/com/bourdi_bay/WindowsRemote/Input/: InputContract.java  InputHandler.java  InputHandlerSelector.java  InputPreferencesBuilder.java  InputPresenter.java
AndroidClient/app/src/main/java/com/bourdi_bay/WindowsRemote/Settings/: SettingsActivity.java  SettingsContract.java  SettingsFragment.java  SettingsPresenter.java
AndroidClient/app/src/main/res/layout/: activity_main.xml  content_main.xml  fragment_main.xml
AndroidClient/app/src/main/res/menu/: menu_main.xml
AndroidClient/app/src/main/res/values/: arrays.xml  colors.xml  ids.xml  strings.xml
AndroidClient/app/src/main/res/xml/: preferences.xml
AndroidClient/app/src/test/java/com/bourdi_bay/WindowsRemote/: BluetoothCommunicatorTest.java  InputPreferencesBuilderTest.java
AndroidClient/app/src/test/java/com/bourdi_bay/WindowsRemote/Settings/: SettingsPresenterTest.java
AndroidClient/app/src/test/java/com/bourdi_bay/WindowsRemote/Utils/: BluetoothUtils.java
AndroidClient/gradle/wrapper/: gradle-wrapper.properties
WindowsServer/: .gitignore  CMakeLists.txt  gen_VS14_x64_with_patch_solution_debug.bat  gen_VS14_x64_with_patch_solution_release.bat  run_release_bluetooth.bat  run_release_tcp.bat  run_release_udp.bat
WindowsServer/ClientTest/: CMakeLists.txt  main.c
WindowsServer/ServerMouseController/: CMakeLists.txt  json_msg_parser.c  json_msg_parser.h  main.c  main_loop.c  main_loop.h  mouse_controller.c
WindowsServer/ServerMouseController/errors/: error_handling.c
WindowsServer/ServerMouseController/sockets/: bluetooth_server.c  bluetooth_server.h  network_server.c  network_server.h  sockets.c  sockets.h
WindowsServer/UnitTests/: CMakeLists.txt  test_ring_buffer.cpp
WindowsServer/lib/: CMakeLists.txt
WindowsServer/lib/Jsmn/: CMakeLists.txt
WindowsServer/lib/RingBuffer/: CMakeLists.txt  ring_buffer.c  ring_buffer.h  ring_buffer_extra.c  ring_buffer_extra.h
(+6 files in other folders)
